--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
 <body>
 
     <!-- 顶部导航栏(左侧) -->
-    <div class="topLNavi">
-            <ul>
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="https://github.com/Nook001">GitHub</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="https://www.linkedin.com/in/%E8%BF%9C%E5%BF%97-%E5%88%98-539146252/">LinkedIn</a></li>
-            </ul>
-    </div>
+    <div class="topNavi">
 
-    <!-- 顶部导航栏(右侧) -->
-    <div class="topRNavi">
-        <ul>
+        <ul class="topLeft">
+            <li><a class="home" href="index.html">Home</a></li>
+            <li><a href="https://github.com/Nook001">GitHub</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="https://www.linkedin.com/in/%E8%BF%9C%E5%BF%97-%E5%88%98-539146252/">LinkedIn</a></li>
+        </ul>
+
+        <ul class="topRight">
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
