--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
 
     <!-- LeetCode数据 -->
-    <div class="skill">
+    <div class="skill" id="3">
         <h2>Skill</h2>
 
         <div class="chart">
