--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <!-- 左侧 -->
         <ul class="topLeft">
-            <li><a href="#1">Home</a></li>
+            <li class="ha"><a href="#1">Home</a></li>
             <li><a href="#2">Introduce</a></li>
             <li><a href="#3">Skills</a></li>
             <li><a href="#4">Project</a></li>
@@ -41,7 +41,6 @@
 
         <!-- 右侧 -->
         <ul class="topRight">
-
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
