--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!-- 表格文件 -->
     <link href="asset/ChartCss/charts.min.css" rel="stylesheet" />
 
+    <!-- Bootstrap5 -->
+    <link href="asset/bootstrap5.3.3/css/bootstrap.min.css" />
+
     <!-- 图标文件 -->
     <link href="asset/AwesomeFont/css/fontawesome.css" rel="stylesheet" />
     <link href="asset/AwesomeFont/css/brands.css" rel="stylesheet" />
@@ -32,16 +35,15 @@
         <div class="logo"></div>
 
         <!-- 左侧 -->
-        <ul class="topLeft">
-            <li class="ha"><a href="#1">Home</a></li>
-            <li><a href="#2">Introduce</a></li>
-            <li><a href="#3">Skills</a></li>
-            <li><a href="#4">Project</a></li>
-        </ul>
+
 
         <!-- 右侧 -->
         <ul class="topRight">
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="#4">Project</a></li>
+            <li><a href="#3">Skills</a></li>
+            <li><a href="#2">Introduce</a></li>
+            <li><a href="#1" id="home">Home</a></li>
         </ul>
     </div>
 
@@ -59,14 +61,13 @@
 
     <!-- 首页 书法名字 -->
     <div class="name">
-        <img src="images/name.png" height="90.5VH" alt="my name" />
+        <img src="images/name2.png" alt="my name" />
     </div>
 
     <!-- 网页介绍 Introduction -->
     <div class="intro" id="2">
         <h2>Introduction</h2>
-            <p>Hello and welcome to Nook's website.</p>
-            <p>This website contains some information about me</p>
+            <p>Hello and welcome to Nook's website. <br> <br>This website contains some information about me</p>
     </div>
 
     <!-- 个人介绍 About -->
@@ -100,7 +101,7 @@
             and I can also write front-end code using HTML and CSS.
             My main interest is software engineering.<br><br>
 
-            After school I volunteer in various activities held by Warwick Volunteer and am interested in making computer games.
+            After school, I volunteer in various activities held by Warwick Volunteer and am interested in making computer games.
         </p>
     </div>
 
@@ -179,6 +180,8 @@
         建设中
     </div>
 
+
+    <script src="asset/bootstrap5.3.3/js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
